# cc-notifier

./: .gitignore  .pre-commit-config.yaml  APPROACHES.md  CLAUDE.md  Makefile  README.md  cc-notifier  cc_notifier.context.md  cc_notifier.py  install.sh  manual_testing.py  pyproject.toml  test_focus_failure.py  uninstall.sh
.claude/commands/: fix.md
docs/: RESEARCH_LOG.md
mobile/: README.md  mosh-cc-resume.sh  tmux-idle-cleanup.sh
src/: cc-notifier  cc-notifier-cleanup.sh  cc-notifier-init.sh  cc-notifier-notify.sh  lib.sh  session_end_hook.sh  session_start_hook.sh  stop_hook.sh
tests/: test_core.py  test_integrations.py  tests.context.md
